# hope-documentation

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: labeler.yml
.github/workflows/: docs.yml  labeler.yml
docs/: .pages  index.md  links.md
docs/_hooks/: hooks.py
docs/_scripts/: build_glossary.py  get_settings.py
docs/components/: .pages  aurora.md  cr.md  hde.md  index.md  kobo.md  pg.md  reporting.md  workspace.md
docs/components/aurora/: .pages  index.md  setup.md  usage.md
docs/components/aurora/setup/: config.md  docker.md  virtualenv.md
docs/components/hde/: .pages  API.md  deduplication_description.md  demo.md  development.md  index.md  setup.md  tmp.md  tmp2.md  troubleshooting.md
docs/components/hde/did/: .pages  config.md  index.md  (+1 more)
docs/components/hope/: stack.md
docs/components/pg/: .pages  index.md  wu.md
docs/components/reporting/: .pages  glossary.md  index.md  tmp.md
docs/components/workspace/: index.md
docs/glossary/terms/: .pages  beneficiary.md  collector.md  flex_field.md  household.md  payments.md  process.md  program.md  programme.md  rdi.md  structure.md  targeting.md
docs/guide-adm/: .pages  dependencies.md  index.md
docs/guide-adm/hope/: .pages  dependencies.md  docker.md  settings.md
docs/guide-dev/: .pages  contribute.md  dod.md  index.md  lists.md  pr.md  setup.md  stack.md  tests.md
docs/guide-user/: .pages  beneficiary.md  grievance.md  index.md  log.md  payment.md  payment_verification.md  people.md  pm.md  population.md  process.md  program.md  programme.md  pv.md  targeting.md  user.md
(+10 files in other folders)
