[project]
name = "HOPE"
version = "2.0.0"
description = ""

dependencies = [
    "cairosvg>=2.7.1",
    "markupsafe>=2.1.5",
    "mdx-gh-links>=0.4",
    "mkdocs-autolinks-plugin>=0.7.1",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocs-click>=0.8.1",
    "mkdocs-ezglossary-plugin>=1.6.10",
    "mkdocs-ezlinks-plugin>=0.1.14",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-link-marker>=0.1.3",
    "mkdocs-material>=9.5.15",
    "mkdocs-simple-hooks>=0.1.5",
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.1",
    "pymdown-extensions>=10.7.1",
    "mkdocs-embed-external-markdown>=3.0.2",
    "mkdocs-include-markdown-plugin>=6.2.2",
    "mkdocs-alias-plugin>=0.8.1",
    "pillow>=10.4.0",
    "requests>=2.32.3",
    "django-environ>=0.11.2",
]
requires-python = "==3.12.*"
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pdbpp>=0.10.3",
]
